--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-.classpath
-.project
-.settings
-target
+# general maven excludes
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+buildNumber.properties
+dependency-reduced-pom.xml
+pom.xml.next
+pom.xml.releaseBackup
+pom.xml.tag
+pom.xml.versionsBackup
+release.properties
+target/
+# project excludes
